исправление tooltip